@@ -1,3 +1,9 @@
+2004-05-04  Andreas Kupries  <andreask@activestate.com>
+
+	* install_action.tcl: Fixed [SF Tcllib Bug 784519]. Loading the
+	  proper doctools directly, and not using the package system. The
+	  latter may get confused and try to load the wrong (old) package.
+
 2004-04-27  Andreas Kupries  <andreask@activestate.com>
 
 	* installed_modules.tcl: Added new module.
